--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
           <p>Lý lịch</p></a
         >
         <a href="#" class="name-user">
-          <h1>Nguyễn Văn A</h1>
-          <p class="fullstack">Full Stack Developer</p>
+          <!-- <h1>Nguyễn Văn A</h1> -->
+          <img src="images\avt.jpg" alt="" />
+          <!-- <p class="fullstack">Full Stack Developer</p> -->
         </a>
         <a href="#" class="mail-user"
           ><i class="icon-mail-alt"></i>
@@ -430,15 +431,15 @@
         <div></div>
         <div class="fb">
           <i class="icon-facebook-circled"></i>
-          <p>Facebook</p>
+          <a href="">Facebook</a>
         </div>
         <div class="li">
           <i class="icon-linkedin-circled"></i>
-          <p>Linkedin</p>
+          <a href="">Linkedin</a>
         </div>
         <div class="gh">
           <i class="icon-github-circled"></i>
-          <p>Github</p>
+          <a href="">Github</a>
         </div>
       </div>
     </section>
