--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         style="width: 100%"
       />
       <div class="textBanner">
-        <h1>Nguyễn Văn A</h1>
+        <h1>Phạm Mạnh Hùng</h1>
         <span>Full Stack Developer</span>
       </div>
     </div>
@@ -39,9 +39,7 @@
           <p>Lý lịch</p></a
         >
         <a href="#" class="name-user">
-          <!-- <h1>Nguyễn Văn A</h1> -->
           <img src="images\avt.jpg" alt="" />
-          <!-- <p class="fullstack">Full Stack Developer</p> -->
         </a>
         <a href="#" class="mail-user"
           ><i class="icon-mail-alt"></i>
@@ -70,11 +68,12 @@
           <h1 class="section-title">Thông tin cá nhân</h1>
           <ul class="mt-40 info">
             <li class="gender"><span>Giới tính</span> : Nam</li>
-            <li class="dateOfBirth"><span>Ngày sinh</span> : 19/05/2000</li>
-            <li class="tel"><span>Điện thoại</span> : (+84) 912398xxx</li>
+            <li class="dateOfBirth"><span>Ngày sinh</span> : 06/10/1994</li>
+            <li class="tel"><span>Điện thoại</span> : (+84) 366032600</li>
             <li class="email"><span>Email</span> : sinhvien@funix.edu.vn</li>
             <li class="address">
-              <span>Địa chỉ</span> : Số 10, đường 10, Hà Nội
+              <span>Địa chỉ</span> : 107 Nguyễn Chí Thanh, Láng Hạ, Đống Đa, Hà
+              Nội
             </li>
             <li class="website"><span>Website</span> : https://abc.tech</li>
           </ul>
@@ -431,15 +430,18 @@
         <div></div>
         <div class="fb">
           <i class="icon-facebook-circled"></i>
-          <a href="">Facebook</a>
+          <a href="https://www.facebook.com/hung.phammanh.505/">Facebook</a>
         </div>
         <div class="li">
           <i class="icon-linkedin-circled"></i>
-          <a href="">Linkedin</a>
+          <a
+            href="https://www.linkedin.com/in/m%E1%BA%A1nh-h%C3%B9ng-ph%E1%BA%A1m-16215326a/"
+            >Linkedin</a
+          >
         </div>
         <div class="gh">
           <i class="icon-github-circled"></i>
-          <a href="">Github</a>
+          <a href="https://github.com/Hungyuuki?tab=repositories">Github</a>
         </div>
       </div>
     </section>
