--- a/news-paper.html
+++ b/news-paper.html
@@ -24,7 +24,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
             />
-         <title>Assignment 03-Digital-CV</title>
+         <title>Assignmen 03 - Newspaper</title>
    </head>
    <body>
       <div class="container-fluid bg-primary p-3">
