--- a/pet-management.html
+++ b/pet-management.html
@@ -5,7 +5,7 @@
          <meta charset="UTF-8" />
          <meta http-equiv="X-UA-Compatible" content="IE=edge" />
          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-         <link rel="stylesheet" href="css/project-charter-cv.css">
+         <link rel="stylesheet" href="css/project-charter.css">
          <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -24,7 +24,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
             />
-         <title>Assignment 03-Digital-CV</title>
+         <title>Assigment 03 - Pet-Management</title>
    </head>
    <body>
       <div class="container-fluid bg-primary p-3">
