--- a/digital-cv.html
+++ b/digital-cv.html
@@ -5,7 +5,7 @@
          <meta charset="UTF-8" />
          <meta http-equiv="X-UA-Compatible" content="IE=edge" />
          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-         <link rel="stylesheet" href="css/project-charter-cv.css">
+         <link rel="stylesheet" href="css/project-charter.css">
          <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
@@ -29,9 +29,10 @@
    <body>
       <div class="container-fluid bg-primary p-3">
          <div class="row">
+            <!-- Cột 1 -->
             <div class="col1 col-12 col-lg-4 col-md-12">
 
-<!-- ---------------------------------------------------------------- -->
+<!-- ------------------------------------------------------ -->
             <div class="bg-light h-100">
                <div class="p goals bg-light">
                   <p class="fs-3 fw-bold text-primary m-0 p-2">Goals</p>
@@ -78,16 +79,13 @@
                         <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque odio consequuntur, tenetur consectetur animi sequi temporibus blanditiis doloribus illo ad!</p>
                      </div>
                      <hr>
-                  </div>
+                  </div>               
                </div>
-
-<!-- ---------------------------------------------------------------- -->
-
+               <div class="horial w-100"></div>
+<!-- ----------------------------------------------------->
             </div>
          </div>
-            
-
-<!-- ---------------------------------------------------------------- -->
+<!-- ---------Cột 2------------------------------------->
             <div class="col2 col-12 col-lg-4 col-md-12">
               <!-- ---------------------------------------------------------------- -->
               <div class="bg-light h-100">
@@ -99,28 +97,28 @@
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
                         <div class="items">
                            <p class="goal">Member 1</p>
-                           <p class="lorem">Lorem ipsum</p>
+                           <p class="lorem">Giàng Lơ Mơ</p>
                         </div>
                      </div>
                      <div class="flex-ctn d-lg-flex d-md-block">
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
                         <div class="items">
                            <p class="goal">Member 2</p>
-                           <p class="lorem">Lorem ipsum</p>
+                           <p class="lorem">Đèo Pa Rí</p>
                         </div>
                      </div>
                      <div class="flex-ctn d-lg-flex d-md-block">
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
                         <div class="items">
                            <p class="goal">Member 3</p>
-                           <p class="lorem">Lorem ipsum</p>
+                           <p class="lorem">Đinh Công Vợi</p>
                         </div>
                      </div>
                      <div class="flex-ctn d-lg-flex d-md-block">
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
                         <div class="items">
                            <p class="goal">Member 4</p>
-                           <p class="lorem">Lorem ipsum</p>
+                           <p class="lorem">Tống Văn Thơng</p>
                         </div>
                      </div>
                      <hr>
@@ -133,23 +131,23 @@
                   <div class="goals-content">
                      <div class="flex-ctn d-lg-flex d-md-block">
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-circle-question fa-xl"></i></div>
-                        <p class="lorem">Lorem ipsum dolor sit amet</p>
+                        <p class="lorem">Ẩn hiện được thông tin người dùng, để hiển thị cần nhập đúng mail.</p>
                      </div>
                      <div class="flex-ctn d-lg-flex d-md-block">
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-circle-question fa-xl"></i></div>
-                        <p class="lorem">Lorem ipsum dolor sit amet</p>
+                        <p class="lorem">Nút create new một CV mới.</p>
                      </div>
                   </div>
                </div>
-
-               <!-- ---------------------------------------------------------------- -->
+               <div class="horial w-100"></div>
+               <!-- ------------------------------------------------------------------>
             </div>
          </div>
-<!-- ---------------------------------------------------------------- -->
 
+<!-- ---------------Cột 3------------------------------------>
             <div class="col3 col-12 col-lg-4 col-md-12">
 
-              <!-- ---------------------------------------------------------------- -->
+              <!-------Các phần tử cột 3------------------>
               <div id="col3" class="bg-light h-100">
                <div class="p timeline bg-light bg-gradient">
                   <p class="fs-3 fw-bold text-primary  m-0 p-2">Timeline</p>
