--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <title>Assignment 03</title>
   </head>
   <body>
+    <!-- Phần Banner  -->
     <div id="banner">
       <img
         class="imageBanner"
@@ -42,7 +43,7 @@
         <span>Full Stack Developer</span>
       </div>
     </div>
-
+    <!-- nav-bar  -->
     <section id="nav-bar">
       <nav class="container">
         <a class="information-user" href="#">
@@ -66,7 +67,7 @@
         >
       </nav>
     </section>
-
+    <!-- Thông tin và mục tiêu  -->
     <section id="about" class="bg-grey">
       <div class="container1">
         <div id="target">
@@ -112,7 +113,7 @@
         </div>
       </div>
     </section>
-
+    <!-- Các thông tin về kinh nghiệm, công việc, sở thích  -->
     <section id="job-info">
       <div class="container2">
         <div
@@ -430,9 +431,10 @@
         </div>
       </div>
     </section>
+    <!-- Bằng cấp  -->
     <section id="certificate" class="bg-grey">
       <div class="container3">
-        <h1 class="section-title">Chứng chỉ - Giải thưởng</h1>
+        <h1 class="section-title space">Chứng chỉ - Giải thưởng</h1>
         <div class="certificate-content">
           <div class="certificate-items">
             <img src="images\Cert_DBI.png" alt="" />
@@ -465,7 +467,7 @@
         </div>
       </div>
     </section>
-
+    <!-- Dự án đã làm  và có project charter-->
     <section id="project">
       <div class="container4">
         <h1 class="section-title">Dự án</h1>
@@ -507,7 +509,7 @@
           <div class="project-items">
             <img class="img-project" src="images\project_2.png" alt="" />
             <div class="project-title">
-              <a class="fw-bold" href="digital-pet.html"
+              <a class="fw-bold" href="pet-management.html"
                 >Trang Web quản lý thú cưng</a
               >
             </div>
@@ -544,7 +546,7 @@
           <div class="project-items">
             <img class="img-project" src="images\project_3.png" alt="" />
             <div class="project-title">
-              <a class="fw-bold" href="digital-web.html"
+              <a class="fw-bold" href="news-paper.html"
                 >Trang Web xem tin tức.</a
               >
             </div>
@@ -580,7 +582,7 @@
         </div>
       </div>
     </section>
-
+    <!-- Footer  -->
     <section id="footer" class="bg-grey">
       <div class="container5">
         <div class="blank"></div>
