--- a/pet-management.html
+++ b/pet-management.html
@@ -24,7 +24,7 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
             />
-         <title>Assigment 03 - Pet-Management</title>
+         <title>Assignment 03-Digital-CV</title>
    </head>
    <body>
       <div class="container-fluid bg-primary p-3">
@@ -41,7 +41,8 @@
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-flag fa-xl"></i></div>
                         <div class="items">
                            <p class="goal">Goal 1</p>
-                           <p class="lorem">Trang web CV cá nhân Online, gồm các thông tin cá nhân cũng như kỹ năng nghề nghiệp</p>
+                           <p class="lorem">
+                              Ứng dụng giúp quản lý các thông tin của thú cưng như: Cân nặng, giống, tình trạng tiêm chủng, ... bao gồm các chức năng thêm/ sửa/ xóa.</p>
                         </div>
                      </div>
                      <hr>
@@ -49,7 +50,7 @@
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-flag fa-xl"></i></div>
                         <div class="items">
                            <p class="goal">Goal 2</p>
-                           <p class="lorem">Thành thạo HTML, CSS</p>
+                           <p class="lorem">Phát triển code-Review code-Tối ưu code-Xử lý lỗi.</p>
                         </div>
                      </div>
                      <hr>
@@ -57,7 +58,7 @@
                         <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-flag fa-xl"></i></div>
                         <div class="items">
                            <p class="goal">Goal 3</p>
-                           <p class="lorem">Phát triển code, xử lý bug,...</p>
+                           <p class="lorem">HTML,CSS, JavaScript</p>
                         </div>
                      </div>
                      <hr>
@@ -78,78 +79,75 @@
                         <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque odio consequuntur, tenetur consectetur animi sequi temporibus blanditiis doloribus illo ad!</p>
                      </div>
                      <hr>
-                  </div>
+                  </div>               
                </div>
-
-<!-- ---------------------------------------------------------------- -->
-
+               <div class="horial w-100"></div>
+<!-- ----------------------------------------------------->
             </div>
          </div>
-            
+<!-- ----------------------------------------------------->
+<div class="col2 col-12 col-lg-4 col-md-12">
+   <!-- ---------------------------------------------------------------- -->
+   <div class="bg-light h-100">
+    <div class="p team bg-light bg-gradient">
+       <p class="fs-3 fw-bold text-primary  m-0 p-2">Team</p>
+       <hr>
+       <div class="goals-content">
+          <div class="flex-ctn d-lg-flex d-md-block">
+             <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
+             <div class="items">
+                <p class="goal">Member 1</p>
+                <p class="lorem">Giàng Lơ Mơ</p>
+             </div>
+          </div>
+          <div class="flex-ctn d-lg-flex d-md-block">
+             <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
+             <div class="items">
+                <p class="goal">Member 2</p>
+                <p class="lorem">Đèo Pa Rí</p>
+             </div>
+          </div>
+          <div class="flex-ctn d-lg-flex d-md-block">
+             <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
+             <div class="items">
+                <p class="goal">Member 3</p>
+                <p class="lorem">Đinh Công Vợi</p>
+             </div>
+          </div>
+          <div class="flex-ctn d-lg-flex d-md-block">
+             <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
+             <div class="items">
+                <p class="goal">Member 4</p>
+                <p class="lorem">Tống Văn Thơng</p>
+             </div>
+          </div>
+          <hr>
+       </div>
+    </div>
+    <div class="horial w-100 bg-primary"></div>
+    <div class="p primary bg-light">
+       <p class="fs-3 fw-bold text-primary">Primary</p>
+       <hr>
+       <div class="goals-content">
+          <div class="flex-ctn d-lg-flex d-md-block">
+             <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-circle-question fa-xl"></i></div>
+             <p class="lorem">Thêm sửa xóa và tìm kiếm thú cưng.</p>
+          </div>
+          <div class="flex-ctn d-lg-flex d-md-block">
+             <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-circle-question fa-xl"></i></div>
+             <p class="lorem">Nút giỏ hàng và chức năng thanh toán Online.</p>
+          </div>
+       </div>
+    </div>
+    <div class="horial w-100"></div>
+    <!-- ------------------------------------------------------------------>
+ </div>
+</div>
 
-<!-- ---------------------------------------------------------------- -->
-            <div class="col2 col-12 col-lg-4 col-md-12">
-              <!-- ---------------------------------------------------------------- -->
-              <div class="bg-light h-100">
-               <div class="p team bg-light bg-gradient">
-                  <p class="fs-3 fw-bold text-primary  m-0 p-2">Team</p>
-                  <hr>
-                  <div class="goals-content">
-                     <div class="flex-ctn d-lg-flex d-md-block">
-                        <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
-                        <div class="items">
-                           <p class="goal">Member 1</p>
-                           <p class="lorem">Lorem ipsum</p>
-                        </div>
-                     </div>
-                     <div class="flex-ctn d-lg-flex d-md-block">
-                        <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
-                        <div class="items">
-                           <p class="goal">Member 2</p>
-                           <p class="lorem">Lorem ipsum</p>
-                        </div>
-                     </div>
-                     <div class="flex-ctn d-lg-flex d-md-block">
-                        <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
-                        <div class="items">
-                           <p class="goal">Member 3</p>
-                           <p class="lorem">Lorem ipsum</p>
-                        </div>
-                     </div>
-                     <div class="flex-ctn d-lg-flex d-md-block">
-                        <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-user fa-xl"></i></div>
-                        <div class="items">
-                           <p class="goal">Member 4</p>
-                           <p class="lorem">Lorem ipsum</p>
-                        </div>
-                     </div>
-                     <hr>
-                  </div>
-               </div>
-               <div class="horial w-100 bg-primary"></div>
-               <div class="p primary bg-light">
-                  <p class="fs-3 fw-bold text-primary">Primary</p>
-                  <hr>
-                  <div class="goals-content">
-                     <div class="flex-ctn d-lg-flex d-md-block">
-                        <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-circle-question fa-xl"></i></div>
-                        <p class="lorem">Lorem ipsum dolor sit amet</p>
-                     </div>
-                     <div class="flex-ctn d-lg-flex d-md-block">
-                        <div class="flag d-flex justify-self-md-center"><i class="fa-solid fa-circle-question fa-xl"></i></div>
-                        <p class="lorem">Lorem ipsum dolor sit amet</p>
-                     </div>
-                  </div>
-               </div>
-
-               <!-- ---------------------------------------------------------------- -->
-            </div>
-         </div>
-<!-- ---------------------------------------------------------------- -->
-
+<!-- ---------------Cột 3------------------------------------>
             <div class="col3 col-12 col-lg-4 col-md-12">
 
-              <!-- ---------------------------------------------------------------- -->
+              <!-------Các phần tử cột 3------------------>
               <div id="col3" class="bg-light h-100">
                <div class="p timeline bg-light bg-gradient">
                   <p class="fs-3 fw-bold text-primary  m-0 p-2">Timeline</p>
